# korsub

./: README.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  settings.rs  srt.rs  translate.rs  types.rs  whisper.rs
src/components/: SettingsModal.vue  SubtitleTable.vue
