[package]
name = "korsub"
version = "0.1.0"
description = "韓文影片中文字幕生成工具"
authors = ["Eason Lin"]
edition = "2021"

[lib]
name = "korsub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["process", "fs", "io-util", "macros"] }
